# LLM-Dev

./: .env.template  README.md  common_ops.mak  environment.yml  main.py  minimal_test.py  pyproject.toml  requirements-evaluation.txt  requirements.txt  run_cognitive_tests.py  run_tests.bat  run_tests.ps1  run_tests.py  run_validation.py  setup_and_test.ps1  setup_env.bat  test_cognitive_core.py  test_core.py  test_env.py  test_patterns.py  validate_core.py  validate_env.ps1  validate_metrics.py  validate_reasoning.py
config/: anthropic_config.yml  common_ops.mak  haystack_config.yml  install.py  langchain_config.yml  llama_index_config.yml  openai_config.yml  requirements-dev.txt  requirements-evaluation.txt  requirements-minimal.txt  requirements.txt
docs/: evaluation_framework.md
examples/: migrate_evaluation.py  safety_metrics_runner.py  stocks.py
prompts/: NER.py  README.txt  classification.py  create_multiple_question_answer_pairs.py  expert_qa.py  sentiment_analysis.py  summarisation.py
prompty/: basic-1.prompty
scripts/: check_nlp.py  check_system.py  install.py  run_cognitive_tests.py  run_tests.bat  run_tests.ps1  run_tests.py  run_validation.py  setup_and_test.ps1  setup_env.bat  validate_core.py  validate_env.ps1  validate_metrics.py  validate_reasoning.py
src/: __init__.py  advanced_evaluation.py  advanced_monitoring.py  advanced_reporting.py  advanced_visualisation.py  agent_system.py  chain_management.py  evaluation.py  evaluation_system.py  gui.py  metric_registry.py  prompt_management.py  task_orchestration.py
tests/: __init__.py  (+18 more)
(+21 files in other folders)
