[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-dev"
version = "0.1.0"
description = "Cognitive metrics evaluation framework for language models"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.7.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
numpy = "^1.24.3"
pandas = "^1.5.3"
scikit-learn = "^1.3.0"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[project]
readme = "README.md"
license = {file = "LICENSE"}
